fixing footer spacing on mobile

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -113,6 +113,7 @@
 				a {
 					color: white;
 					text-decoration: none;
+					margin-top: 2%;
 				}
 			}
 			.logo-box-mobile {
